Thu Jun  6 00:30:04 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (NET_LUID): define it on MinGW32.
	  mingw-w64 has NET_LUID but mingw32 (mingw.org) still doesn't have
	  NET_LUID. reported by taco on IRC

Thu Jun  6 00:05:08 2013  Akinori MUSHA  <knu@iDaemons.org>

	* string.c (String#b): Allow code range scan to happen later so
	  ascii_only? on a result string returns the correct value.
	  [ruby-core:55315] [Bug #8496]

Wed Jun  5 22:40:42 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (capability_response): should ignore trailing
	  spaces.  Thanks, Peter Kovacs.  [ruby-core:55024] [Bug #8415]

	* test/net/imap/test_imap_response_parser.rb: related test.

Wed Jun  5 21:17:08 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_fdiv): Use nlz() instead of bdigbitsize().
	  (bdigbitsize): Removed.

Wed Jun  5 20:32:00 2013  Kenta Murata  <mrkn@cookpad.com>

	* include/ruby/ruby.h: fix alignment in comment.

Wed Jun  5 20:05:29 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (int_pair_to_real_inclusive): Add a cast to BDIGIT.
	  (random_load): Fix shift width for fixnums.
	  Re-implement bignum extraction without ifdefs.

Wed Jun  5 15:26:10 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c (before_gc_sweep): don't optimize it to avoid segv on Ubuntu
	  10.04 gcc 4.4.
	  http://u32.rubyci.org/~chkbuild/ruby-trunk/log/20130527T190301Z.diff.html.gz

Wed Jun  5 09:46:46 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (TestFileUtils#test_mkdir): add
	  EACCES for Windows.

Wed Jun  5 08:13:37 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_pow): Don't need to multiply SIZEOF_BDIGITS.
	  Use nlz instead of bitlength_bdigit.
	  (bitlength_bdigit): Removed.

Wed Jun  5 07:14:18 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (d_lite_cmp, d_lite_equal): simplified.

Wed Jun  5 07:07:01 2013  Tadayoshi Funaba  <tadf@dotrb.org>
