@@ -1,3 +1,8 @@
+Thu Jun  6 00:52:42 2013  Masaya Tarui  <tarui@ruby-lang.org>
+
+	* gc.c (rgengc_rememberset_mark): change scan algorithm for performance:
+	  from object's pointer base to bitmap one.
+
 Thu Jun  6 00:30:04 2013  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* win32/win32.c (NET_LUID): define it on MinGW32.
